- CHANGE: inspect_data and pcrit now have 'function deprecated' warnings in docs and code
- CHANGE: adjust_rate - changed rates from 'corrected' to 'adjusted.rate' in output (updated code in convert_rate, convert_DO to match)
- CHANGE: convert_rate - outputs renamed (e.g. output to output.rate, absolute to absolute.rate etc.). should not affect code anywhere else since this is last function



========================== inspect() ============================
Changes

- `time = 1` and `oxygen = 2` the defaults rather than NULL
- if `oxygen = NULL` now inspects ALL columns
- added `width` input for rolling reg plot (default 0.1)
- updated roxygen docs. There was quite a lot out of date...
- Added message if multiple columns inspected that subsequent functions will only use first 2 by default
- Multiple rate inspection plot improved. Now all plot on same axes ranges, better colours and spacing.
- FIX: Rolling rate plot failed with even a single NA in time or oxygen data.




========================== S3 Methods ============================

All
- Changed primary input `x` to `object` for consistency across all (was in some, not in others)
- All summary S3 have `export = TRUE` for export of summary table
- Added `return(invisible(object))` where missing
- All stop if 'pos' too high
- All print much better with nicer spacing, especially in pipes

print.adjust_rate
- FIX: prints adjustment correctly if pos > 1

summary.adjust_rate
- FIX: 'adjustment' column was missing

summary.convert_rate
- FIX: prints summary table as columns correctly

print.inspect
- CHANGE: if uneven time, now prints min/max intervals found
- FIX: time error locations now printed out when multiple o2 columns inspected

print.auto_rate
- CHANGE: prints all results of interval method regardless of pos or width

print.calc_rate.ft
- NEW: now has `pos` argument

plot.calc_rate
- CHANGE: changed `rep` to `pos` for consistency

mean.auto_rate
mean.calc_rate
mean.calc_rate.bg
mean.adjust_rate